Connect to the future.

--- a/components/event-login-pw.html
+++ b/components/event-login-pw.html
@@ -196,7 +196,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       signed-in="{{signedIn}}"
       user="{{user}}">
     </firebase-auth>
-    <paper-button id="signInPw" raised on-tap="openLogin">Click here to begin</paper-button>
+    <paper-button id="signInPw" raised on-tap="openLogin">Connect</paper-button>
     <paper-dialog id="logIn" entry-animation="scale-up-animation" exit-animation="fade-out-animation">
       <h1>Login</h1>
       <form is="iron-form" id="loginForm">
@@ -230,8 +230,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </paper-input>
           <span id="invalidLogin">Invalid login credentials!</span>
         </fieldset>
-        <paper-button on-tap="signIn" id="loginButton" disabled>Click here to Login</paper-button>
-        <p id="signInRegistration">Don't have an Account? <span id="accountReg" on-tap="openReg">Click here to register</span></p>
+        <paper-button on-tap="signIn" id="loginButton" disabled>Connect</paper-button>
+        <p id="signInRegistration">Don't have an Account? <span id="accountReg" on-tap="openReg">Create Account</span></p>
       </form>
     </paper-dialog>
     <paper-dialog id="registrationForm" entry-animation="scale-up-animation" exit-animation="fade-out-animation">
