--- a/components/main-app.html
+++ b/components/main-app.html
@@ -2,8 +2,11 @@
   <template>
 	<style include="note-app-shared-styles">
   .event-planner-0 {
-    width: 80%;
+    width: 70%;
     margin: 15px auto;
+    vertical-align: top;
+    border: 3px solid #73AD21;
+    float:right
   }
   :host {
     height: auto;
@@ -129,11 +132,16 @@
          
 	<!--  Docs: https://codelabs.developers.google.com/codelabs/polymer-firebase-pwa/index.html?index=..%2F..%2Findex#26
 	docs cont: https://github.com/PolymerLabs/note-app-elements/blob/master/na-note.html -->
-	<div class="notes">
-  		<template is="dom-repeat" items="[[persistedNotes]]" as="note">
-    		<event-planner
-        		id$="[[note.$key]]"
-        		title="[[note.title]]"
+
+  <div style="width:100%;"> 
+    <div style="float:left;">
+    Content left div to be filled with calendar.
+    </div> 
+    <div class="notes">
+      <template is="dom-repeat" items="[[persistedNotes]]" as="note">
+        <event-planner
+            id$="[[note.$key]]"
+            title="[[note.title]]"
             host="[[note.host]]"
             eventtype="[[note.eventtype]]"
             startdate="[[note.startdate]]"
@@ -141,10 +149,10 @@
             location="[[note.location]]"
             guesttitle="[[note.guesttitle]]"
             guestlist="[[note.guestlist]]"
-        		on-tap="edit">
-    		</event-planner>
-  		</template>
-	</div>
+            on-tap="edit">
+        </event-planner>
+      </template>
+  </div>
 
   </template>
   <script>
