--- a/components/main-app.html
+++ b/components/main-app.html
@@ -135,7 +135,9 @@
 
   <div style="width:100%;"> 
     <div style="float:left;">
-    Content left div to be filled with calendar.
+    
+    <paper-date-picker date="April 21, 2015" force-narrow="true"></paper-date-picker>
+
     </div> 
     <div class="notes">
       <template is="dom-repeat" items="[[persistedNotes]]" as="note">
