--- a/components/main-app.html
+++ b/components/main-app.html
@@ -2,10 +2,10 @@
   <template>
 	<style include="note-app-shared-styles">
   .event-planner-0 {
-    width: 70%;
+    width: 90%;
     margin: 15px auto;
     vertical-align: top;
-    border: 3px solid #73AD21;
+    border: 3px solid ##3f51b5;
     float:right
   }
   :host {
@@ -135,8 +135,8 @@
 
   <div style="width:100%;"> 
     <div style="float:left;">
-    
-    <paper-date-picker date="April 21, 2015" force-narrow="true"></paper-date-picker>
+
+    <paper-date-picker date="April 21, 2015" force-narrow="true" style="background: #FF6200; height: 585px;"></paper-date-picker>
 
     </div> 
     <div class="notes">
