--- a/components/main-app.html
+++ b/components/main-app.html
@@ -56,6 +56,8 @@
     } 
   </style>
 
+  <slide-images-button></slide-images-button>
+
 	<!--  More on : https://codelabs.developers.google.com/codelabs/polymer-firebase-pwa/index.html?index=..%2F..%2Findex#20 -->
 	<event-toolbar disabled="[[!signedIn]]" signed-in="[[signedIn]]" on-sign-out="signOut"></event-toolbar>
 
