--- a/components/main-app.html
+++ b/components/main-app.html
@@ -138,9 +138,23 @@
   <div style="width:100%;"> 
     <div style="float:left;">
 
-    <paper-date-picker date="February 25, 2017" force-narrow="true" style="background: #FF6200; height: 585px;"></paper-date-picker>
+   <!-- <paper-date-picker date="February 25, 2017" force-narrow="true" style="background: #FF6200; height: 85px;">   
+    </paper-date-picker>-->
+
+    <paper-date-picker style="background: #FF6200";>
+    </paper-date-picker>
+
+ <br>
+
+   <geo-location latitude="{{lat}}" longitude="{{lng}}" ></geo-location>
+
+   <google-map latitude="[[lat]]" longitude="[[lng]]" api-key="AIzaSyD3E1D9b-Z7ekrT3tbhl_dy8DCXuIuDDRc"  fit-to-marker>
+    <google-map-marker latitude="[[lat]]" longitude="[[lng]]"></google-map-marker>
+   </google-map>
+
 
     </div> 
+
     <div class="notes">
       <template is="dom-repeat" items="[[persistedNotes]]" as="note">
         <event-planner
