--- a/components/event-planner.html
+++ b/components/event-planner.html
@@ -268,6 +268,8 @@
       <p class$="[[emptyClass(eventtype)]]">This event is a <span class="type">{{eventtype}}</span>, located at <span class="location">{{location}}.</span><br>
       This event starts at: <span class="startdate">{{startdate}}</span> and ends at: <span class="endate">{{enddate}}</span>.</p>
       <p class$="[[emptyClass(location)]]"></p>
+      <share-buttons></share-buttons>
+
     </template>
     <script type="text/javascript" src="js/app.js"></script>
   </template>
