--- a/components/main-app.html
+++ b/components/main-app.html
@@ -1,5 +1,12 @@
 <dom-module id="main-app">
   <template>
+  <style>
+
+  google-map {
+    height: 300px;
+  }
+  </style>
+
 	<style include="note-app-shared-styles">
   .event-planner-0 {
     width: 90%;
@@ -171,7 +178,6 @@
         </event-planner>
       </template>
   </div>
-
   </template>
   <script>
     Polymer({
