Resize share media icons

--- a/components/share-buttons.html
+++ b/components/share-buttons.html
@@ -8,32 +8,32 @@
 
     <!-- Facebook -->
     <a href="http://www.facebook.com/sharer.php?u=https://www.ing.ro/persoane-fizice" target="_blank">
-        <img src="img/facebook.png" alt="Facebook" height="32" width="32" />
+        <img src="img/facebook.png" alt="Facebook" height="20" width="20" style="text-decoration: none;"/>
     </a>
     
     <!-- Google+ -->
     <a href="https://plus.google.com/share?url=https://www.ing.ro/persoane-fizice" target="_blank">
-        <img src="img/google.png" alt="Google" height="32" width="32" />
+        <img src="img/google.png" alt="Google" height="20" width="20" style="text-decoration: none;"/>
     </a>
     
     <!-- LinkedIn -->
     <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://www.ing.ro/persoane-fizice" target="_blank">
-        <img src="img/linkedin.png" alt="LinkedIn" height="32" width="32" />
+        <img src="img/linkedin.png" alt="LinkedIn" height="20" width="20" style="text-decoration: none;"/>
     </a>
     
     <!-- Reddit -->
     <a href="http://reddit.com/submit?url=https://www.ing.ro/persoane-fizice&amp;title=Simple Share Buttons" target="_blank">
-        <img src="img/reddit.png" alt="Reddit" height="32" width="32" />
+        <img src="img/reddit.png" alt="Reddit" height="20" width="20" style="text-decoration: none;"/>
     </a>
     
     <!-- Tumblr-->
     <a href="http://www.tumblr.com/share/link?url=https://www.ing.ro/persoane-fizice&amp;title=Simple Share Buttons" target="_blank">
-        <img src="img/tumblr.png" alt="Tumblr" height="32" width="32" />
+        <img src="img/tumblr.png" alt="Tumblr" height="20" width="20" style="text-decoration: none;"/>
     </a>
      
     <!-- Twitter -->
     <a href="https://twitter.com/share?url=https://www.ing.ro/persoane-fizice&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons" target="_blank">
-        <img src="img/twitter.png" alt="Twitter" height="32" width="32" />
+        <img src="img/twitter.png" alt="Twitter" height="20" width="20" style="text-decoration: none;"/>
     </a>
   </template>
   
