Fixed the share icons

--- a/components/share-buttons.html
+++ b/components/share-buttons.html
@@ -3,37 +3,44 @@
 <dom-module id="share-buttons">
   <template>
     <style>
-    
+        a img
+        {
+            border: 0 none;
+        }
+        .image-link
+        {
+            text-decoration: none;
+        }
     </style>
 
     <!-- Facebook -->
-    <a href="http://www.facebook.com/sharer.php?u=https://www.ing.ro/persoane-fizice" target="_blank">
-        <img src="img/facebook.png" alt="Facebook" height="20" width="20" style="text-decoration: none;"/>
+    <a href="http://www.facebook.com/sharer.php?u=https://www.ing.ro/persoane-fizice" class="image-link" target="_blank">
+        <img src="img/facebook.png" alt="Facebook" height="20" width="20"/>
     </a>
     
     <!-- Google+ -->
-    <a href="https://plus.google.com/share?url=https://www.ing.ro/persoane-fizice" target="_blank">
-        <img src="img/google.png" alt="Google" height="20" width="20" style="text-decoration: none;"/>
+    <a href="https://plus.google.com/share?url=https://www.ing.ro/persoane-fizice" class="image-link" target="_blank">
+        <img src="img/google.png" alt="Google" height="20" width="20"/>
     </a>
     
     <!-- LinkedIn -->
-    <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://www.ing.ro/persoane-fizice" target="_blank">
-        <img src="img/linkedin.png" alt="LinkedIn" height="20" width="20" style="text-decoration: none;"/>
+    <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://www.ing.ro/persoane-fizice" class="image-link" target="_blank">
+        <img src="img/linkedin.png" alt="LinkedIn" height="20" width="20"/>
     </a>
     
     <!-- Reddit -->
-    <a href="http://reddit.com/submit?url=https://www.ing.ro/persoane-fizice&amp;title=Simple Share Buttons" target="_blank">
-        <img src="img/reddit.png" alt="Reddit" height="20" width="20" style="text-decoration: none;"/>
+    <a href="http://reddit.com/submit?url=https://www.ing.ro/persoane-fizice&amp;title=Simple Share Buttons" class="image-link" target="_blank">
+        <img src="img/reddit.png" alt="Reddit" height="20" width="20"/>
     </a>
     
     <!-- Tumblr-->
-    <a href="http://www.tumblr.com/share/link?url=https://www.ing.ro/persoane-fizice&amp;title=Simple Share Buttons" target="_blank">
-        <img src="img/tumblr.png" alt="Tumblr" height="20" width="20" style="text-decoration: none;"/>
+    <a href="http://www.tumblr.com/share/link?url=https://www.ing.ro/persoane-fizice&amp;title=Simple Share Buttons" class="image-link" target="_blank">
+        <img src="img/tumblr.png" alt="Tumblr" height="20" width="20"/>
     </a>
      
     <!-- Twitter -->
-    <a href="https://twitter.com/share?url=https://www.ing.ro/persoane-fizice&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons" target="_blank">
-        <img src="img/twitter.png" alt="Twitter" height="20" width="20" style="text-decoration: none;"/>
+    <a href="https://twitter.com/share?url=https://www.ing.ro/persoane-fizice&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons" class="image-link" target="_blank">
+        <img src="img/twitter.png" alt="Twitter" height="20" width="20"/>
     </a>
   </template>
   
