--- a/components/main-app.html
+++ b/components/main-app.html
@@ -144,13 +144,15 @@
 
   <div style="width:100%;"> 
     <div style="float:left;">
+<!--
+   <paper-date-picker date="February 25, 2017" force-narrow="true" style="background: #FF6200; height: 85px;">   
+    </paper-date-picker> -->
 
-   <!-- <paper-date-picker date="February 25, 2017" force-narrow="true" style="background: #FF6200; height: 85px;">   
-    </paper-date-picker>-->
-
+ 
     <paper-date-picker style="background: #FF6200";>
     </paper-date-picker>
-    <br>
+    <br> 
+    
     
    <geo-location latitude="{{lat}}" longitude="{{lng}}" ></geo-location>
    <google-map latitude="[[lat]]" longitude="[[lng]]" api-key="AIzaSyD3E1D9b-Z7ekrT3tbhl_dy8DCXuIuDDRc"  fit-to-marker>
@@ -170,6 +172,8 @@
             location="[[note.location]]"
             guesttitle="[[note.guesttitle]]"
             guestlist="[[note.guestlist]]"
+            latitude="[[lat]]" 
+            longitude="[[lng]]"
             on-tap="edit">
         </event-planner>
       </template>
