--- a/components/main-app.html
+++ b/components/main-app.html
@@ -108,7 +108,8 @@
 	<event-planner-editor
     id="editor"
     note="{{editableNote}}"
-    on-close="commitChange">
+    on-close="commitChange"
+    >
 	</event-planner-editor>
 	
 	<!--  Docs: https://codelabs.developers.google.com/codelabs/polymer-firebase-pwa/index.html?index=..%2F..%2Findex#25 
