--- a/components/event-planner-editor.html
+++ b/components/event-planner-editor.html
@@ -36,11 +36,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
         position: absolute;
         top: 0;
-        left: 0;
+        left: 10px;
         border-radius: 512px;
-        width: 256px;
-        height: 256px;
-        background-color: rgb(63, 81, 181);
+        width: 190px;
+        height: 190px;
+        background-image: url("img/inside.png");
+        background-color: rgb(255, 255, 255);
         transform-origin: 128px 128px;
       }
       event-planner {
