--- a/components/main-app.html
+++ b/components/main-app.html
@@ -12,7 +12,7 @@
     width: 90%;
     margin: 15px auto;
     vertical-align: top;
-    border: 3px solid ##3f51b5;
+    border: 3px solid #3f51b5;
     float:right
   }
   :host {
@@ -182,6 +182,7 @@
         </event-planner>
       </div>
       </template>
+  </div>
   </div>
   </template>
   <script>
