--- a/components/event-login-google.html
+++ b/components/event-login-google.html
@@ -38,7 +38,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         pointer-events: none;
       }
       paper-button > * {
-        vertical-align: left;
+        vertical-align: top;
         text-transform: none;
       }
     </style>
